# SerhiiKalenichenko-personal-assistant

./: .gitignore  README.md  conftest.py  pyproject.toml  setup.cfg
src/assistance/: cli.py  intent_parser.py  notes.py
src/assistant/: __init__.py  addressbook.py  birthdays.py  cli.py  commands.py  contacts.py  intent_parser.py  models.py  notes.py  storage.py  tags.py  validators.py
test/: test_cli_smoke.py  test_notes.py
