[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = setuptools.build_meta

[project]
name = "ska-personal-assistant"
version = "1.0.0"
description = "CLI Personal Assistant: address book + notes"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Serhii Kalenichenko" }]
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "python-dateutil>=2.9"
]

[project.scripts]
assistant = "assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
